[package]
name = "botan-src"
version = "0.21903.1"
authors = ["Rodolphe Breard <rodolphe@what.tf>", "Jack Lloyd <jack@randombit.net>"]
description = "Sources of Botan cryptography library"
license = "MIT"
edition = "2021"
homepage = "https://botan.randombit.net/"
repository = "https://github.com/randombit/botan-rs"
readme = "README.md"
categories = ["cryptography"]

[dependencies]

[[example]]
name = "build"
path = "examples/build.rs"
