[package]
name = "botan-src"
version = "0.30101.2"
authors = ["Rodolphe Breard <rodolphe@what.tf>", "Jack Lloyd <jack@randombit.net>"]
description = "Sources of Botan cryptography library"
license = "MIT"
edition = "2021"
homepage = "https://botan.randombit.net/"
repository = "https://github.com/randombit/botan-rs"
readme = "README.md"
categories = ["cryptography"]
exclude = ["botan/doc",
           "botan/src/cli",
           "botan/src/tests",
           "botan/src/bogo_shim",
           "botan/src/examples",
           "botan/src/fuzzer"]

[dependencies]

[[example]]
name = "build"
path = "examples/build.rs"
