[package]
name = "botan-src"
version = "0.30900.2"
authors = ["Rodolphe Breard <rodolphe@what.tf>", "Jack Lloyd <jack@randombit.net>"]
description = "Sources of Botan cryptography library"
license = "MIT"
edition = "2021"
homepage = "https://botan.randombit.net/"
repository = "https://github.com/randombit/botan-rs"
readme = "README.md"
categories = ["cryptography"]
rust-version = "1.64"

exclude = ["botan/doc",
           "botan/src/bogo_shim",
           "botan/src/cli",
           "botan/src/ct_selftest",
           "botan/src/examples",
           "botan/src/fuzzer",
           "botan/src/lib/filters",
           "botan/src/lib/prov/pkcs11",
           "botan/src/lib/prov/tpm",
           "botan/src/lib/prov/tpm2",
           "botan/src/python",
           "botan/src/tests"]

[dependencies]

[[example]]
name = "build"
path = "examples/build.rs"
