[package]
name = "botan-sys"
version = "0.11.0"
authors = ["Jack Lloyd <jack@randombit.net>"]
links = "botan-3"
build = "build.rs"
description = "FFI wrapper for Botan cryptography library"
license = "MIT"
homepage = "https://botan.randombit.net/"
repository = "https://github.com/randombit/botan-rs"
documentation = "https://docs.rs/botan-sys"
readme = "README.md"
categories = [ "cryptography", "external-ffi-bindings", "no-std" ]
edition = "2021"
rust-version = "1.64"

[features]
default = []
vendored = ["botan-src", "botan3"]
botan3 = []
static = []
pkg-config = ["dep:pkg-config"]

[build-dependencies]
botan-src = { version = "0.30500.1", optional = true, path = "../botan-src" }
pkg-config = { version = "0.3.30", optional = true }
