[package]
name = "botan"
version = "0.10.7"
authors = ["Jack Lloyd <jack@randombit.net>"]
description = "Rust wrapper for Botan cryptography library"
license = "MIT"
homepage = "https://botan.randombit.net/"
repository = "https://github.com/randombit/botan-rs"
documentation = "https://docs.rs/botan"
keywords = [ "crypto" ]
readme = "../README.md"
categories = [ "cryptography", "api-bindings", "no-std" ]
edition = "2021"
rust-version = "1.58"

[dependencies]
botan-sys = { version = "0.10.5", path = "../botan-sys" }

[dev-dependencies]
wycheproof = "0.5"
hex = "0.4"

[features]
default = []
no-std = ["botan-sys/no-std"]
vendored = ["botan-sys/vendored"]
botan3 = ["botan-sys/botan3"]
