[package]
name = "botan"
version = "0.12.0"
authors = ["Jack Lloyd <jack@randombit.net>"]
description = "Rust wrapper for Botan cryptography library"
license = "MIT"
homepage = "https://botan.randombit.net/"
repository = "https://github.com/randombit/botan-rs"
documentation = "https://docs.rs/botan"
keywords = [ "crypto" ]
readme = "../README.md"
categories = [ "cryptography", "api-bindings", "no-std" ]
edition = "2021"
rust-version = "1.64"

[dependencies]
botan-sys = { version = "1.20250506", path = "../botan-sys" }

[dev-dependencies]
wycheproof = { version = "0.6", default-features = false, features = ["aead", "cipher", "dsa", "ecdh", "ecdsa", "eddsa", "hkdf", "keywrap", "mac", "primality", "rsa_enc", "rsa_sig", "xdh"] }
hex = "0.4"

[features]
default = ["std"]
std = []
vendored = ["botan-sys/vendored"]
static = ["botan-sys/static"]
pkg-config = ["botan-sys/pkg-config"]